fixed background image position mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -333,6 +333,7 @@ header {
     background-image: url('images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
 }
 
 .restaurant-page-wrapper {
